--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
           <div class="titlepage">
             <h2>My <strong class="yellow"> Courses</strong></h2>
           </div>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-          <a href="Javascript:void(0)">Read more</a>
+          <p>At ANSquare, we are currently building material to help students learn Mathematics, Physics subjects. Soon, we shall also start publishing content to teach students programmings languages, Cloud and AI/ML. Stay tuned by subscribing to our channel.</p>
+          <a href="https://www.youtube.com/channel/UCWcNGCulEo-pQFp54i4SaKQ">Read more</a>
         </div>
       </div> 
     </div>
