--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
        </div>
      </div>
      <!-- end header inner -->
-
+      <div><h3><a href="/files/Date_Sheet_Session_2022_23_29122022.pdf">CBSE X Datesheet</a></h3></div>
      <!-- end header -->
      <section class="slider_section">
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
