--- a/index.html
+++ b/index.html
@@ -146,15 +146,16 @@
                 <div class="row">
                   <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
                     <div class="text-bg">
-                      <h1>Physics - Higher Classes</h1>
+                      <h1>IMO - Maths Olympiad</h1>
                       <p>TOPICS - For IX and X Standard</p>
-                      <a href="https://www.youtube.com/watch?v=HtVk2f-8d34&list=PLcGIU4izwKNIA_KAihTk_1JJBcLHtS92U">Free Lectures</a> <a href="https://www.youtube.com/watch?v=p2L7kLw9_1E&list=PLcGIU4izwKNJI8BZiygE6DIHUDQhWGExe">More Free Topics</a>
+                      <a href="https://youtu.be/q84yH-nnASM">Free Lectures</a> 
                     </div>
                   </div>
                   <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
                     <div class="images_box">
                       <!-- <figure><img src="images/img2.jpg"></figure> -->
-                      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcGIU4izwKNJI8BZiygE6DIHUDQhWGExe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!--                       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcGIU4izwKNJI8BZiygE6DIHUDQhWGExe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/E7cfnnGMzc0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                   </div>
                 </div>
