--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="images_box">
                       <!-- <figure><img src="images/img2.jpg"></figure> -->
 <!--                       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcGIU4izwKNJI8BZiygE6DIHUDQhWGExe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-                      <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=E7cfnnGMzc0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/E7cfnnGMzc0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                   </div>
                 </div>
